deploy/production/deployment.tpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${KUBE_NAMESPACE}
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: ${KUBE_NAMESPACE}
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: ${KUBE_NAMESPACE}
  template:
    metadata:
      labels:
        app: ${KUBE_NAMESPACE}
    spec:
      terminationGracePeriodSeconds: 35
      serviceAccountName: ${KUBE_NAMESPACE}-service
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: node
          image: ${ECR_URL}:${IMAGE_TAG}
          resources:
            limits:
              cpu: 8000m
              memory: 8000Mi
            requests:
              cpu: 1000m
              memory: 1000Mi
          securityContext:
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities: 
              drop: ["ALL"]
