deploy/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: migration-link-exchange-build-prod
  labels:
    app: migration-link-exchange-build-prod
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: migration-link-exchange-build-prod
